--- a/app/src/main/assets/chat.html
+++ b/app/src/main/assets/chat.html
@@ -4,21 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Watson Assistant Chat</title>
+    <title>Home Assistant Chat</title>
 </head>
 <body>
 <script>
-    window.watsonAssistantChatOptions = {
-        integrationID: "13740d2d-f1f3-48e4-b749-067d23eb28c8", // The ID of this integration.
-        region: "us-south", // The region your integration is hosted in.
-        serviceInstanceID: "3873b023-4933-4e79-a24b-200697d4f1e7", // The ID of your service instance.
-        onLoad: async (instance) => { await instance.render(); }
-    };
-    setTimeout(function(){
-        const t=document.createElement('script');
-        t.src="https://web-chat.global.assistant.watson.appdomain.cloud/versions/" + (window.watsonAssistantChatOptions.clientVersion || 'latest') + "/WatsonAssistantChatEntry.js";
-        document.head.appendChild(t);
-    });
+  window.watsonAssistantChatOptions = {
+    integrationID: "d8ade20f-a5a6-4cf3-b7ee-94cd91c0cda9", // The ID of this integration.
+    region: "au-syd", // The region your integration is hosted in.
+    serviceInstanceID: "b3b28251-726c-4506-8cbd-978c8dd5c61b", // The ID of your service instance.
+    onLoad: async (instance) => { await instance.render(); }
+  };
+  setTimeout(function(){
+    const t=document.createElement('script');
+    t.src="https://web-chat.global.assistant.watson.appdomain.cloud/versions/" + (window.watsonAssistantChatOptions.clientVersion || 'latest') + "/WatsonAssistantChatEntry.js";
+    document.head.appendChild(t);
+  });
 </script>
 </body>
 </html>
