--- a/app/src/main/assets/chat.html
+++ b/app/src/main/assets/chat.html
@@ -9,9 +9,9 @@
 <body>
 <script>
   window.watsonAssistantChatOptions = {
-    integrationID: "d8ade20f-a5a6-4cf3-b7ee-94cd91c0cda9", // The ID of this integration.
-    region: "au-syd", // The region your integration is hosted in.
-    serviceInstanceID: "b3b28251-726c-4506-8cbd-978c8dd5c61b", // The ID of your service instance.
+    integrationID: "eaed04f0-d184-4586-9607-c1e294cadb98", // The ID of this integration.
+    region: "us-south", // The region your integration is hosted in.
+    serviceInstanceID: "011e0215-3743-4604-a691-65405ce40c59", // The ID of your service instance.
     onLoad: async (instance) => { await instance.render(); }
   };
   setTimeout(function(){
